overflow fix

--- a/src/components/Statement.scss
+++ b/src/components/Statement.scss
@@ -91,7 +91,7 @@
 	}
 
 	.rotate {
-		overflow: hidden;
+		// overflow: hidden;
 	}
 
 	span {
